--- a/details/antalya.html
+++ b/details/antalya.html
@@ -1,1 +1,12 @@
-Antalya
+<div class="city-container"> 
+  <div class="city-image">
+	<div class="city-title">Antalya</div>
+    <div class="city-info">
+    
+    	<p>Antalya</p>
+<p>Bilinen tarihi en az 10 bin yıl öncesine, Eski Taş Çağı'na ulaşan[8] Ankara, Hattileri, Hititleri, Frigleri, Lidyalıları, Ahamenişleri (Persler), Makedonyalıları, Galatları (Keltler), Romalıları, Selçukluları ve Osmanlıları ağırlamış, Batı ve Doğu medeniyetlerine ev sahipliği yapmıştır. Geçmişte, Galatların bir boyu olan Tektosaglara[9] ve sonrasında Friglere[10] başkentlik yapmış olan kent, 13 Ekim 1923'ten beri Türkiye'ye[5] başkentlik etmektedir.</p>
+    </div>
+    <div class="c"></div>
+  </div>
+</div> 
+<a href='#' class='close'></a>
