--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 </div>
 <p>Interactive Turkey Map uses RafaelJs plugin.</p>
   <div style="width:250px; margin:0 auto; text-align:center;">
-    <p style="display:inline;"><a href="https://twitter.com/share" class="twitter-share-button" data-via="SelenGora">Tweet</a> 
+    <p style="display:inline;"><a href="https://twitter.com/share" class="twitter-share-button" data-via="mozmut">Tweet</a> 
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></p>
-    <p style="display:inline;"><span>©2012</span> <a href="http://twitter.com/selengora/" target="blank">@SelenGora</a></p>
+    <p style="display:inline;"><span>©2012</span> <a href="http://twitter.com/mozmut/" target="blank">@mozmut</a></p>
   </div>
 </div>
-<a href="https://github.com/SelenGora/TurkeyMap"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> 
+<a href="https://github.com/mozmut/TurkeyMap"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> 
 
 
 </body>
