--- a/tr-map-raphael/demo/index.html
+++ b/tr-map-raphael/demo/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div id="izmir"></div>
 		<script src="../js/raphael-min.js"></script>
-		<script src="../js/izmir.js"></script>
+		<script src="../js/turkey.js"></script>
 		<script src="../js/draw.js"></script>
 	</body>
 </html>
