--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <!--Stylesheets-->
-<link rel="stylesheet" type="text/css" href="css/normalize.css">
-<link rel="stylesheet" type="text/css" href="css/default.css?update=01112013">
+<!--<link rel="stylesheet" type="text/css" href="css/normalize.css">-->
+<!--<link rel="stylesheet" type="text/css" href="css/default.css?update=01112013">-->
 
 <!-- Jquery Plugins-->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
@@ -22,12 +22,7 @@
 <div id="map">
   <div id="detail"> </div>
 </div>
-<p>Interactive Turkey Map uses RafaelJs plugin.</p>
-  <div style="width:250px; margin:0 auto; text-align:center;">
-    <p style="display:inline;"><a href="https://twitter.com/share" class="twitter-share-button" data-via="mozmut">Tweet</a> 
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></p>
-    <p style="display:inline;"><span>©2022</span> <a href="http://twitter.com/mozmut/" target="blank">@mozmut</a></p>
-  </div>
+<div style="width:250px; margin:0 auto; text-align:center;"></div>
 </div>
 <a href="https://github.com/mozmut/TurkeyMap"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> 
 
