--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <!--Stylesheets-->
-<!--<link rel="stylesheet" type="text/css" href="css/normalize.css">-->
-<!--<link rel="stylesheet" type="text/css" href="css/default.css?update=01112013">-->
+<link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/default.css?update=01112013">
 
 <!-- Jquery Plugins-->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
