--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -5,7 +5,7 @@
 
 <!--Stylesheets-->
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/default.css?update=01112013">
+ <link rel="stylesheet" type="text/css" href="css/default.css">
 
 <!-- Jquery Plugins-->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
