--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -5,14 +5,14 @@
 
 <!--Stylesheets-->
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
- <link rel="stylesheet" type="text/css" href="css/default.css">
+<link rel="stylesheet" type="text/css" href="css/default.css?update=01112013">
 
 <!-- Jquery Plugins-->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/raphael.js"></script>
-<script type="text/javascript" src="js/paths.js"></script>
-<script type="text/javascript" src="js/init.js"></script>
-<script type="text/javascript" src="js/jquery.tipsy.js"></script>
+<script type="text/javascript" src="js/raphael.js?update=01112013"></script>
+<script type="text/javascript" src="js/paths.js?update=01112013"></script>
+<script type="text/javascript" src="js/init.js?update=01112013"></script>
+<script type="text/javascript" src="js/jquery.tipsy.js?update=01112013"></script>
 <title>Interactive Turkey Map with RaphaelJS</title>
 </head>
 
