--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -11,8 +11,8 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 <script type="text/javascript" src="js/raphael.js?update=01112013"></script>
 <script type="text/javascript" src="js/paths.js?update=01112013"></script>
-<script type="text/javascript" src="js/init.js?update=01112013"></script>
-<script type="text/javascript" src="js/jquery.tipsy.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
+<script type="text/javascript" src="js/jquery.tipsy.js?update=01112013"></script>
 <title>Interactive Turkey Map with RaphaelJS</title>
 </head>
 
