--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -9,7 +9,7 @@
 
 <!-- Jquery Plugins-->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/raphael.js?update=01112013"></script>
+<script type="text/javascript" src="js/raphael.js"></script>
 <script type="text/javascript" src="js/paths.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
 <script type="text/javascript" src="js/jquery.tipsy.js?update=01112013"></script>
