--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="js/raphael.js"></script>
 <script type="text/javascript" src="js/paths.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
-<script type="text/javascript" src="js/jquery.tipsy.js?update=01112013"></script>
+<script type="text/javascript" src="js/jquery.tipsy.js"></script>
 <title>Interactive Turkey Map with RaphaelJS</title>
 </head>
 
