--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/default.css">
 
 <!-- Jquery Plugins-->
-<script src="https://code.jquery.com/jquery-1.8.0.min.js" integrity="sha256-jFdOCgY5bfpwZLi0YODkqNXQdIxKpm6y5O/fy0baSzE=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-1.8.0.min.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/raphael.js"></script>
 <script type="text/javascript" src="js/paths.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
