--- a/TurkeyMap/index.html
+++ b/TurkeyMap/index.html
@@ -24,7 +24,7 @@
 </div>
 <div style="width:250px; margin:0 auto; text-align:center;"></div>
 </div>
-<a href="https://github.com/mozmut/TurkeyMap"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> 
+<a href="https://github.com/mozmut/mozmut.github.io/tree/master/TurkeyMap"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> 
 
 
 </body>
